tests/error/must_abstract1.gw
#! [contains] must be declared 'abstract'
class abstract C {
  fun abstract void test(int i);
}

class D extends C {}
